# kmean-cuda

./: data.csv  main.ipynb
src/: CMakeLists.txt  main.cu
